# ThermoSoft

./: .clang-format  .gitmodules  .mxproject  CMakeLists.txt  LICENSE  README  README.md  ThermoSoft.ioc
.github/workflows/: clang-format.yml  cmake-build.yml
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  syscalls.c  sysmem.c  system_stm32h5xx.c
Drivers/BSP/: lan8742.c  lan8742.h
Drivers/CMSIS/Include/: cachel1_armv7.h  cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv7.h  mpu_armv8.h  pac_armv81.h  pmu_armv8.h
Drivers/STM32H5xx_HAL_Driver/Inc/: stm32h5xx_hal.h  stm32h5xx_hal_cortex.h  stm32h5xx_hal_dcache.h  stm32h5xx_hal_def.h  stm32h5xx_hal_dma.h  stm32h5xx_hal_dma_ex.h  stm32h5xx_hal_eth.h  stm32h5xx_hal_eth_ex.h  stm32h5xx_hal_exti.h  stm32h5xx_hal_fdcan.h  stm32h5xx_hal_flash.h  stm32h5xx_hal_flash_ex.h  stm32h5xx_hal_fmac.h  stm32h5xx_hal_gpio.h  stm32h5xx_hal_gpio_ex.h  stm32h5xx_hal_icache.h  stm32h5xx_hal_pcd.h  stm32h5xx_hal_pcd_ex.h  stm32h5xx_hal_pwr.h  stm32h5xx_hal_pwr_ex.h  stm32h5xx_hal_rcc.h  stm32h5xx_hal_rcc_ex.h  stm32h5xx_hal_spi.h  stm32h5xx_hal_spi_ex.h  stm32h5xx_ll_bus.h  stm32h5xx_ll_cortex.h  stm32h5xx_ll_crs.h  stm32h5xx_ll_dcache.h  stm32h5xx_ll_dma.h  stm32h5xx_ll_exti.h  stm32h5xx_ll_fmac.h  stm32h5xx_ll_gpio.h  stm32h5xx_ll_icache.h  stm32h5xx_ll_pwr.h  stm32h5xx_ll_rcc.h  stm32h5xx_ll_spi.h  stm32h5xx_ll_system.h  stm32h5xx_ll_usb.h  stm32h5xx_ll_utils.h
Drivers/STM32H5xx_HAL_Driver/Src/: stm32h5xx_hal.c  stm32h5xx_hal_cortex.c  stm32h5xx_hal_dcache.c  stm32h5xx_hal_dma.c  stm32h5xx_hal_dma_ex.c  stm32h5xx_hal_eth.c  stm32h5xx_hal_eth_ex.c  stm32h5xx_hal_exti.c  stm32h5xx_hal_fdcan.c  stm32h5xx_hal_flash.c  stm32h5xx_hal_flash_ex.c  stm32h5xx_hal_fmac.c  stm32h5xx_hal_gpio.c  stm32h5xx_hal_icache.c  stm32h5xx_hal_pcd.c  stm32h5xx_hal_pcd_ex.c  stm32h5xx_hal_pwr.c  stm32h5xx_hal_pwr_ex.c  stm32h5xx_hal_rcc.c  stm32h5xx_hal_rcc_ex.c  stm32h5xx_hal_spi.c  stm32h5xx_hal_spi_ex.c  stm32h5xx_ll_usb.c
MAX31856/: CMakeLists.txt
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
lwip/: CMakeLists.txt
lwip/app/: lwip.c  lwip.h
src/api/: api_lib.c  api_msg.c  err.c  if_api.c  netbuf.c  netdb.c  netifapi.c  sockets.c  tcpip.c
src/core/: altcp.c  altcp_alloc.c  altcp_tcp.c  def.c  dns.c  inet_chksum.c  init.c  ip.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  stats.c  sys.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
src/core/ipv4/: acd.c  autoip.c  dhcp.c  etharp.c  icmp.c  igmp.c  ip4.c  ip4_addr.c  ip4_frag.c
src/core/ipv6/: dhcp6.c  ethip6.c  icmp6.c  ip6.c  ip6_addr.c  ip6_frag.c  mld6.c  nd6.c
src/include/lwip/: acd.h  altcp.h  altcp_tcp.h  altcp_tls.h  api.h  arch.h  autoip.h  debug.h  def.h  dhcp.h  dhcp6.h  dns.h  err.h  errno.h  etharp.h  icmp.h  if_api.h  igmp.h  inet.h  init.h  ip.h  ip4_addr.h  ip4_frag.h  ip6.h  ip6_addr.h  ip6_frag.h  ip6_zone.h  ip_addr.h  memp.h  mld6.h  netbuf.h  netdb.h  netif.h  netifapi.h  opt.h  pbuf.h  raw.h  snmp.h  sockets.h  stats.h  (+6 more)
src/include/netif/: bridgeif.h  ieee802154.h  lowpan6_common.h  zepif.h
src/netif/: bridgeif.c  bridgeif_fdb.c  ethernet.c  lowpan6.c  lowpan6_ble.c  lowpan6_common.c  slipif.c  zepif.c
system/OS/: sys_arch.c
system/arch/: cc.h  sys_arch.h
(+101 files in other folders)
